Closed Bug 1558885 Opened 7 years ago Closed 6 years ago

Android 'mach gtest' fails on non-x86_64 platforms: "XRE_main returned 1" in logcat

Categories

(Testing :: GTest, defect, P1)

57 Branch
defect

Tracking

(firefox71 fixed)

RESOLVED FIXED
mozilla71
Tracking Status
firefox71 --- fixed

People

(Reporter: gbrown, Assigned: gbrown)

References

(Depends on 1 open bug)

Details

Attachments

(1 file)

'mach gtest' runs well on the android x86_64 emulator (the environment used for continuous integration), but it probably fails for other architectures: the gtest libxul.so will not be pushed to the correct location:

https://searchfox.org/mozilla-central/rev/227f5329f75bd8b16c6b146a7414598a420260cb/testing/gtest/remotegtests.py#87

Bug 1544496 would resolve this, or we could try to hack around it.

Depends on: 1318091

This basically works, but introduces a single test failure: LulIntegration.unwind_consistency
I'll need to investigate that before proceeding...

The priority flag is not set for this bug.
:ahal, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(ahal)
Assignee: nobody → gbrown
Flags: needinfo?(ahal)
Priority: -- → P1

Nudged by bug 1584976, I thought I would revisit this patch. Now it works! (No test failures.) I don't know what has changed.

https://treeherder.mozilla.org/#/jobs?repo=try&revision=124a417c7958ab4d20bbb0a19a6d9d851472c4c7

Attachment #9072023 - Attachment is obsolete: true
Attachment #9072023 - Attachment is obsolete: false

(In reply to Geoff Brown [:gbrown] from comment #3)

Nudged by bug 1584976, I thought I would revisit this patch. Now it works! (No test failures.) I don't know what has changed.

https://treeherder.mozilla.org/#/jobs?repo=try&revision=124a417c7958ab4d20bbb0a19a6d9d851472c4c7

This is so surprising, and weakly suggests that compiler variation matters to this code.

Pushed by gbrown@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a5dacb181633 Use separate directory for android gtest libxul; r=bc,nalexander
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: